fix: added BearerAuth notation to handlers
