# docs/swagger.json
@@ -870,6 +870,11 @@
         },
         "/projects": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a paginated list of all projects with their members",
                 "consumes": [
                     "application/json"
@@ -915,6 +920,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new project with members and productivity range",
                 "consumes": [
                     "application/json"
@@ -962,6 +972,11 @@
         },
         "/projects/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a specific project by its ID with all members",
                 "consumes": [
                     "application/json"
@@ -1005,6 +1020,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an existing project with new data",
                 "consumes": [
                     "application/json"
@@ -1057,6 +1077,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a project by its ID",
                 "consumes": [
                     "application/json"
